Fix csv download

--- a/cicom-app/components/comments/comments.view.html
+++ b/cicom-app/components/comments/comments.view.html
@@ -95,7 +95,7 @@
         direction-links="true"
         boundary-links="true" >
         </dir-pagination-controls>
-        <button class="btn btn-success" id="downloadButton" type="button" ng-csv="comments.filteredData" csv-header="comments.keysArray" filename="Comentarios.csv" >CSV</button>                                    
+        <button class="btn btn-success" id="downloadButton" type="button" ng-csv="comments.commentsArray" csv-header="comments.keysArray" filename="Comentarios.csv" >CSV</button>                                    
     </div>
     <div class="newsForm" ng-show="comments.selectedComments">
         <div class="firstCol">
