--- a/cicom-app/components/news/news.view.html
+++ b/cicom-app/components/news/news.view.html
@@ -101,7 +101,7 @@
         direction-links="true"
         boundary-links="true" >
         </dir-pagination-controls>
-        <button class="btn btn-success" id="downloadButton" type="button" ng-csv="news.filteredData" csv-header="news.keysArray" filename="Noticias.csv" >CSV</button>                                    
+        <button class="btn btn-success" id="downloadButton" type="button" ng-csv="news.newsArray" csv-header="news.keysArray" filename="Noticias.csv" >CSV</button>                                    
     </div>
     <div class="newsForm" ng-show="news.selectedNews">
         <div class="linkButtons">
