--- a/cicom-app/components/news/news.view.html
+++ b/cicom-app/components/news/news.view.html
@@ -119,7 +119,7 @@
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Medio</h2><br/>
-                <input type="text" class="form-control" name="media" ng-model="news.news.from.name" readonly/>
+                <input type="text" class="form-control" name="media" ng-model="news.news.name" readonly/>
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Descripción</h2><br/>
