--- a/cicom-app/components/news/news.view.html
+++ b/cicom-app/components/news/news.view.html
@@ -115,7 +115,7 @@
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Fecha de Publicación</h2><br/>
-                {{news.news.post_published_unix*1000|date:'medium': '+0600'}}
+                {{news.news.post_published_unix*1000|date:'medium'}}
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Medio</h2><br/>
