--- a/cicom-app/components/comments/comments.view.html
+++ b/cicom-app/components/comments/comments.view.html
@@ -105,7 +105,7 @@
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Fecha de Publicación</h2><br/>
-                {{comments.comment.comment_published|date:'medium': '+0600'}}
+                {{comments.comment.comment_published|date:'medium'}}
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Medio</h2><br/>
