--- a/cicom-app/components/news/news.view.html
+++ b/cicom-app/components/news/news.view.html
@@ -90,7 +90,7 @@
                 <tr dir-paginate="n in news.newsArray | orderBy:news.sortType:news.sortReverse| filter:news.searchNews| itemsPerPage:5" ng-click="news.selectNews(n)">
                     <th >{{n.post_message}}</th>
                     <td >{{n.name}}</td>
-                    <td >{{n.post_published_unix*1000|date:'medium'}}</td>
+                    <td >{{n.post_published_unix*1000|date:'medium': '+0600'}}</td>
                     <td >{{n.engagement_fb}}</td>
                     <td >{{n.subject}}</td>
                 </tr>
@@ -115,7 +115,7 @@
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Fecha de Publicación</h2><br/>
-                {{news.news.post_published_unix*1000|date:'medium'}}
+                {{news.news.post_published_unix*1000|date:'medium': '+0600'}}
             </div>
             <div class="entry">
                 <h2 class="newsTitle">Medio</h2><br/>
@@ -319,7 +319,7 @@
                             <td ng-show="n.comment_message != ''">{{n.comment_message}}</td>
                         </div>
                         <td >{{n.comment_like_count}}</td>
-                        <td >{{n.comment_published|date:'medium'}}</td>
+                        <td >{{n.comment_published|date:'medium': '+0600'}}</td>
                         <td >{{n.comment_count}}</td>
                     </tr>
                     <tr dir-paginate-end ng-show="expanded">
@@ -348,7 +348,7 @@
                                                 <td ng-show="commentR.comment_message != '' ">{{commentR.comment_message}}</td>
                                             </div>
                                            
-                                            <td>{{commentR.comment_published|date:'medium'}}</td>
+                                            <td>{{commentR.comment_published|date:'medium': '+0600'}}</td>
                                             <td>{{commentR.comment_like_count}}</td>
                                         </tr>
                                     </tbody>
